- Added explosive furniture NPCs
	- ...adding a whole new dimension to the game!
	- Fine-tuned general explosion physics in the process
- Added thermodynamics and sounds to NPC simulation
	- With proper heat dissipation and transfer between NPCs and ship/ambient
- Improved Human NPC behaviors:
	- NPCs now "look ahead" when walking and avoid falling into holes
	- NPCs run away from running water
- More tools interact with NPCs
	- Among which: HeatBlaster, laser cannon, fire extinguisher
- The Move, Remove, and Turnaround NPC tools may now be used on *groups* of NPCs
- NPCs on a ship are now lit by the ship's lamps
- Completed cloud rendering improvement work started in previous update
- Propellers do not work anymore above water by default
	- ...but added a new option to allow them to
- Bug fixes:
	- Fixed a crash when using the repair tool on a part of the ship that had exploded (thanks to AlexGuy!)
	- Fixed a crash happening after adding and removing many NPCs multiple times
	- Linux: fixed ShipBuilder window not opening up as maximized
- Reduced amount of memory required by texture atlases
- Added 3 new ships
- Added new background music: "Intervention", by Scott Buckley (www.scottbuckley.com.au)
- ...and a few more small improvements here and there!
- Musical theme for this release: Nils Frahm, entire discography

1.19.0
- Initial implementation of NPCs!
	- This release contains the foundation of the new NPC sub-system of the simulator
		- Additional functionality will come out with future releases
- Added new "Lamp" tool, allowing you to peer at wrecks into the darkness
	- Revisited darkness of wrecks in the process: ships now fade into darkness as they sink deeper and deeper
		- This new behavior may be controlled via "Settings"->"Rendering"->"Ship"->"Depth Darkening"
- Rendering improvements:
	- Improved flames
		- Each release brings flames closer to the way I've always wanted them to look...
	- Improved clouds
	- Marginal rendering performance improvements