@@ -7,7 +7,10 @@
 - Improved Human NPC behaviors:
 	- NPCs now "look ahead" when walking and avoid falling into holes
 	- NPCs run away from running water
-- More tools interact with NPCs
+- Added new "Move/Rotate Gripped" tool, aka "Physics Move"
+	- Simulates moving or rotating a ship while it is being held by a grip
+	- The old "Move/Rotate" tool is not really physical - it simply pauses simulation while the ship is being moved or rotated; this new tool, instead, moves or rotates a ship in a real "physical" fashion
+- More plain tools interact with NPCs
 	- Among which: HeatBlaster, laser cannon, fire extinguisher
 - The Move, Remove, and Turnaround NPC tools may now be used on *groups* of NPCs
 - NPCs on a ship are now lit by the ship's lamps
@@ -18,7 +21,7 @@
 	- Fixed a crash when using the repair tool on a part of the ship that had exploded (thanks to AlexGuy!)
 	- Fixed a crash happening after adding and removing many NPCs multiple times
 	- Linux: fixed ShipBuilder window not opening up as maximized
-- Reduced amount of memory required by texture atlases
+- Reduced amount of graphics memory required by rendering engine (texture atlases and shaders)
 - Added 3 new ships
 - Added new background music: "Intervention", by Scott Buckley (www.scottbuckley.com.au)
 - ...and a few more small improvements here and there!
